--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "devDependencies": {}
 }
 
