--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,10 @@
   "type": "commonjs",
   "scripts": {
     "start": "node src/server.js",
+    "init-db": "node src/db/init.js",
+    "db:migrate": "npx prisma migrate dev",
+    "db:generate": "npx prisma generate",
+    "db:studio": "npx prisma studio",
     "lint": "echo \"No linter configured yet\""
   },
   "keywords": [
@@ -18,8 +22,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "@prisma/client": "^5.7.1",
+    "redis": "^4.6.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prisma": "^5.7.1"
+  }
 }
 
